--- a/process-backcode/process-jave/camunda-extension/src/main/resources/application.yml
+++ b/process-backcode/process-jave/camunda-extension/src/main/resources/application.yml
@@ -8,3 +8,12 @@ camunda:
       create: All tasks
 #    dmn:
 #      file-path: dmn/approve-decision.dmn
+
+server:
+  port: 8080
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/camunda_engine?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
